--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3 {
+  padding: 0;
+  margin: 0;
 }
 
 html, body {
@@ -10,6 +17,7 @@ body {
   font-family: "Montserrat", sans-serif;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 main {
@@ -17,6 +25,7 @@ main {
 }
 
 /* header */
+
 .header {
   background-color: #ffffff;
   width: 100%;
@@ -65,6 +74,7 @@ main {
 }
 
 /* section-hero */
+
 .section-hero {
   background-image: url(images/hero.jpeg);
   height: 500px;
@@ -106,6 +116,7 @@ main {
 }
 
 /* General section */
+
 .section {
   padding: 80px 0;
   max-width: 1280px;
@@ -162,6 +173,7 @@ main {
 }
 
 /* Buttons */
+
 .button {
   display: block;
   text-decoration: none;
@@ -182,6 +194,7 @@ main {
 }
 
 /* footer */
+
 .footer {
   flex-shrink: 0;
   background-color: #333333;
@@ -196,4 +209,151 @@ main {
 .title {
   margin-top: 100px;
   text-align: center;
+}/* Event page */
+
+.section-event {
+  padding: 0 15px 65px;
 }
+
+
+.event-info__figure {
+  width: 100%;
+  height: 230px;
+  margin-bottom: 24px;
+}
+
+.event-info__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.event-info__content {
+  margin-bottom: 15px;
+}
+
+.event-info__content-row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+
+.event-info__content-row:last-child {
+  margin-bottom: 0;
+}
+
+.event-info__item:last-child {
+  text-align: right;
+}
+
+.event-info__item-title {
+  font-size: 14px;
+  margin-bottom: 4px;
+}
+
+.event-info__item-value {
+  font-size: 14px;
+}
+
+.event-info__description {
+  font-size: 14px;
+  line-height: 150%;
+}
+
+@media screen and (min-width: 500px)
+{
+  .event-info__figure {
+    height: 300px;
+  }
+}
+
+@media screen and (min-width: 768px)
+{
+  .section-event {
+    padding: 0 25px 65px;
+  }
+
+  .event-info {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .event-info__figure {
+    height: 230px;
+    width:  400px;
+  }
+
+  .event-info__content {
+    width: 270px;
+    margin-bottom: 0;
+  }
+  
+  .event-info__content-row {
+    margin-bottom: 32px;
+  }
+  
+  .event-info__item-title {
+    margin-bottom: 12px;
+  }
+
+  .event-info__description {
+    width: 400px;
+  }
+}
+
+@media screen and (min-width: 1024px)
+{
+  .section-event {
+    max-width: 930px;
+    padding: 0 0 64px;
+    margin: 0 auto;
+  }
+
+  .event-info__figure {
+    height: 350px;
+    width: 600px;
+  }
+
+  .event-info__content {
+    width: 300px;
+  }
+  
+  .event-info__content-row {
+    margin-bottom: 32px;
+  }
+  
+  .event-info__item-title {
+    font-size: 16px;
+  }
+  
+  .event-info__item-value {
+    font-size: 16px;
+  }
+
+  .event-info__description {
+    font-size: 16px;
+    width: 600px;
+  }
+
+}
+
+@media screen and (min-width: 1300px)
+{
+  .section-event {
+    max-width: 1280px;
+  }
+
+  .event-info__figure {
+    height: 450px;
+    width: 800px;
+  }
+
+  .event-info__content {
+    width: 400px;
+  }
+  .event-info__description {
+    width: 800px;
+  }
+
+}
+
